# l3afpad

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  SHA1SUMS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  l3afpad.1
data/: Makefile.am  Makefile.in  l3afpad.desktop  l3afpad.desktop.in  l3afpad.xpm
data/icons/: Makefile.am  Makefile.in
data/icons/128x128/: Makefile.am  Makefile.in
data/icons/16x16/: Makefile.am  Makefile.in
data/icons/192x192/: Makefile.am  Makefile.in
data/icons/20x20/: Makefile.am  Makefile.in
data/icons/22x22/: Makefile.am  Makefile.in
data/icons/24x24/: Makefile.am  Makefile.in
data/icons/256x256/: Makefile.am  Makefile.in
data/icons/32x32/: Makefile.am  Makefile.in
data/icons/36x36/: Makefile.am  Makefile.in
data/icons/40x40/: Makefile.am  Makefile.in
data/icons/48x48/: Makefile.am  Makefile.in
data/icons/64x64/: Makefile.am  Makefile.in
data/icons/72x72/: Makefile.am  Makefile.in
data/icons/96x96/: Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  de_CH.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  lv.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sv.po  ta.po  tr.po  (+4 more)
src/: Makefile.am  Makefile.in  callback.c  callback.h  dialog.c  dialog.h  dnd.c  dnd.h  emacs.c  emacs.h  encoding.c  encoding.h  file.c  file.h  font.c  font.h  gtkprint.c  gtkprint.h  gtksourceiter.c  gtksourceiter.h  hlight.c  hlight.h  indent.c  indent.h  l3afpad.h  linenum.c  linenum.h  main.c  menu.c  menu.h  search.c  search.h  selector.c  selector.h  undo.c  undo.h  utils.c  utils.h  view.c  view.h  (+2 more)
src/charset-detector/: Makefile.am
src/charset-detector/include/: Makefile.am
src/charset-detector/src/: Makefile.am
src/charset-detector/src/entry/: Makefile.am  impl.cpp
src/charset-detector/src/tables/: Makefile.am
src/charset-detector/test/: Makefile.am
